--- a/stylesheets/homepage.css
+++ b/stylesheets/homepage.css
@@ -1,5 +1,6 @@
 #cover {
     background-size: cover;
+    background-image: -o-radial-gradient(top, circle, #41414179 0%, #100e17 44%);
     background-image: radial-gradient(circle at top, #41414179 0%, #100e17 44%);
     background-color: #100e17;
     position: relative;
@@ -10,17 +11,24 @@
     border-top-left-radius: 1vw;
     border-top-right-radius: 1vw;
     width: 92vw;
+    display: -ms-grid;
     display: grid;
     grid-template-areas:
         "navigation navigation navigation"
         "cover_intro cover_profile cover_profile"
         "download_cv cover_profile cover_profile";
+    -ms-grid-columns: 4fr 6fr;
     grid-template-columns: 4fr 6fr;
+    -ms-grid-rows: 10% 60% 30%;
     grid-template-rows: 10% 60% 30%;
 }
 
 
 #cover_intro {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+    grid-row: 2;
+    grid-column: 1;
     cursor: default;
     padding: 10% 0 0 10%;
     grid-area: cover_intro;
@@ -28,11 +36,21 @@
 }
 
 #cover_profile {
+    -ms-grid-row: 2;
+    grid-row: 2;
+    -ms-grid-row-span: 2;
+    -ms-grid-column: 2;
+    grid-column: 2;
+    -ms-grid-column-span: 2;
     grid-area: cover_profile;
     position: relative;
 }
 
 #download_cv {
+    -ms-grid-row: 3;
+    -ms-grid-column: 1;
+    grid-row: 3;
+    grid-column: 1;
     grid-area: download_cv;
 }
 
@@ -44,9 +62,12 @@
 }
 
 #dots {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
     display: inline-flex;
     position: relative;
     overflow: hidden;
+    -webkit-animation: dots 3s linear infinite;
     animation: dots 3s linear infinite;
 }
 
@@ -54,18 +75,24 @@
     font-family: 'Playfair Display', serif;
     color: #ffffff;
     font-size: 3.83vw;
+    -o-text-overflow: ellipsis;
     text-overflow: ellipsis;
+    -webkit-transition: text-shadow 0.4s ease-out;
+    -o-transition: text-shadow 0.4s ease-out;
     transition: text-shadow 0.4s ease-out;
 }
 
 .name:hover {
     text-shadow: 0.33vw 0 0 var(--themeColorBack);
+    -webkit-transition: text-shadow 0.4s ease-in;
+    -o-transition: text-shadow 0.4s ease-in;
     transition: text-shadow 0.4s ease-in;
 }
 
 
 #name1 {
     padding-top: 1.8vw;
+    -o-text-overflow: ellipsis;
     text-overflow: ellipsis;
     font-family: 'Source Sans Pro', sans-serif;
     letter-spacing: 1px;
@@ -75,7 +102,11 @@
 }
 
 #b_container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     height: 100%;
 }
@@ -98,9 +129,12 @@
     border: 0.13vw solid var(--themeColor);
     padding: 0.8vw;
     margin-right: 1.5vw;
+    -webkit-text-decoration-line: none;
     text-decoration-line: none;
     text-align: center;
     /* for animation */
+    -webkit-transition: 0.3s ease-in-out;
+    -o-transition: 0.3s ease-in-out;
     transition: 0.3s ease-in-out;
     overflow: hidden;
 }
@@ -109,6 +143,8 @@
 .buttons>a:hover {
     border-bottom: solid var(--themeColor) 0.4vw;
     background-color: var(--themeColorBack);
+    -webkit-transition: 0.3s ease-in;
+    -o-transition: 0.3s ease-in;
     transition: 0.3s ease-in;
 }
 
@@ -119,12 +155,17 @@
     left: 100%;
     width: 100%;
     height: 100%;
+    background-image: -o-linear-gradient(45deg, rgba(255, 255, 255, 0) 25%, rgb(202, 196, 196), rgba(255, 255, 255, 0) 60%);
     background-image: linear-gradient(45deg, rgba(255, 255, 255, 0) 25%, rgb(202, 196, 196), rgba(255, 255, 255, 0) 60%);
+    -webkit-transition: 0.5s ease-in-out;
+    -o-transition: 0.5s ease-in-out;
     transition: 0.5s ease-in-out;
 }
 
 .buttons>a:hover::after {
     left: -100%;
+    -webkit-transition: 0.6s ease-in;
+    -o-transition: 0.6s ease-in;
     transition: 0.6s ease-in;
 }
 
@@ -142,11 +183,15 @@
     font-weight: 700;
     color: var(--themeColor);
     content: "\f0ab";
+    -webkit-transition: 0.3s ease-in-out;
+    -o-transition: 0.3s ease-in-out;
     transition: 0.3s ease-in-out;
 }
 
 #download:hover::before {
     color: white;
+    -webkit-transition: 0.3s ease-in;
+    -o-transition: 0.3s ease-in;
     transition: 0.3s ease-in;
 }
 
@@ -158,6 +203,7 @@
     background-repeat: no-repeat;
     background-position: center;
     position: relative;
+    -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
     -webkit-filter: drop-shadow(2px 1px 0 var(--themeColor)) drop-shadow(-1px -1px 0 var(--themeColor));
     filter: drop-shadow(2px 1px 0 var(--themeColor)) drop-shadow(-1px -1px 0 var(--themeColor));
@@ -171,6 +217,8 @@
     background-position: center;
     background-repeat: no-repeat;
     position: absolute;
+    -webkit-transform: rotate(180deg) scale(0.9);
+    -ms-transform: rotate(180deg) scale(0.9);
     transform: rotate(180deg) scale(0.9);
 }
 
@@ -178,13 +226,19 @@
     width: 100%;
     height: 100%;
     top: 0%;
+    display: -ms-grid;
     display: grid;
     position: absolute;
     grid-template-areas: 'aboutText aboutImage';
+    -ms-grid-columns: 50% 50%;
     grid-template-columns: 50% 50%;
+    -webkit-transform: scale(0.5);
+    -ms-transform: scale(0.5);
     transform: scale(0.5);
     opacity: 0;
     z-index: -10;
+    -webkit-transition: 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+    -o-transition: 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
     transition: 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
     border-radius: 2vw;
 }
@@ -192,10 +246,16 @@
 .showAbout {
     opacity: 1 !important;
     z-index: 100 !important;
+    -webkit-transform: scale(0.8) !important;
+    -ms-transform: scale(0.8) !important;
     transform: scale(0.8) !important;
 }
 
 #aboutText {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    grid-row: 1;
+    grid-column: 1;
     --aboutDelay: 0.4s;
     border-top-left-radius: 2vw;
     border-bottom-left-radius: 2vw;
@@ -205,6 +265,10 @@
 }
 
 #aboutImage {
+    grid-row: 1;
+    grid-column: 2;
+    -ms-grid-row: 1;
+    -ms-grid-column: 2;
     border-top-right-radius: 2vw;
     border-bottom-right-radius: 2vw;
     grid-area: aboutImage;
@@ -219,14 +283,22 @@
     font-size: clamp(0.7rem, calc(1vmax + 1vmin), 5rem);
     font-family: 'Source Sans Pro', sans-serif;
     padding: 2vh 5%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
     transform: translateY(-50%);
     opacity: 0;
+    -webkit-transition: none;
+    -o-transition: none;
     transition: none;
 }
 
 .showP {
+    -webkit-transform: translateY(0) !important;
+    -ms-transform: translateY(0) !important;
     transform: translateY(0) !important;
     opacity: 1 !important;
+    -webkit-transition: 1s cubic-bezier(0.165, 0.84, 0.44, 1) !important;
+    -o-transition: 1s cubic-bezier(0.165, 0.84, 0.44, 1) !important;
     transition: 1s cubic-bezier(0.165, 0.84, 0.44, 1) !important;
 }
 
@@ -235,7 +307,11 @@
     padding: 6vh 5%;
     font-size: clamp(0.7rem, calc(1vmax + 1.5vmin), 3rem);
     font-family: 'Playfair Display', serif;
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
     transform: translateY(0);
+    -webkit-transition-delay: calc(var(--aboutDelay) - 200ms);
+    -o-transition-delay: calc(var(--aboutDelay) - 200ms);
     transition-delay: calc(var(--aboutDelay) - 200ms);
 }
 
@@ -247,22 +323,32 @@
     display: block;
     position: absolute;
     left: 50%;
+    -webkit-transform: translate(-50%, 0);
+    -ms-transform: translate(-50%, 0);
     transform: translate(-50%, 0);
 }
 
 #aboutText p:nth-child(2) {
+    -webkit-transition-delay: calc(var(--aboutDelay) + 0.2s) !important;
+    -o-transition-delay: calc(var(--aboutDelay) + 0.2s) !important;
     transition-delay: calc(var(--aboutDelay) + 0.2s) !important;
 }
 
 #aboutText p:nth-child(3) {
+    -webkit-transition-delay: calc(var(--aboutDelay) + 0.35s) !important;
+    -o-transition-delay: calc(var(--aboutDelay) + 0.35s) !important;
     transition-delay: calc(var(--aboutDelay) + 0.35s) !important;
 }
 
 #aboutText p:nth-child(4) {
+    -webkit-transition-delay: calc(var(--aboutDelay) + 0.5s) !important;
+    -o-transition-delay: calc(var(--aboutDelay) + 0.5s) !important;
     transition-delay: calc(var(--aboutDelay) + 0.5s) !important;
 }
 
 #aboutText p:nth-child(5) {
+    -webkit-transition-delay: calc(var(--aboutDelay) + 0.75s) !important;
+    -o-transition-delay: calc(var(--aboutDelay) + 0.75s) !important;
     transition-delay: calc(var(--aboutDelay) + 0.75s) !important;
 }
 
