--- a/stylesheets/keyframes.css
+++ b/stylesheets/keyframes.css
@@ -1,3 +1,15 @@
+@-webkit-keyframes settingBorder {
+    0% {
+        outline-offset: 0;
+    }
+
+    100% {
+        outline-offset: 0.5vw;
+        outline-color: transparent;
+    }
+}
+
+
 @keyframes settingBorder {
     0% {
         outline-offset: 0;
@@ -6,6 +18,23 @@
     100% {
         outline-offset: 0.5vw;
         outline-color: transparent;
+    }
+}
+
+
+@-webkit-keyframes dots {
+
+    0%,
+    10% {
+        display: none;
+    }
+
+    10% {
+        width: 0.01vw;
+    }
+
+    100% {
+        width: 1.6vw
     }
 }
 
