--- a/stylesheets/projectspage.css
+++ b/stylesheets/projectspage.css
@@ -3,6 +3,8 @@
     height: 100vh;
     width: 92vw;
     background-size: cover;
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(151, 151, 151, 0.1)), color-stop(20%, #100e17));
+    background: -o-linear-gradient(rgba(151, 151, 151, 0.1), #100e17 20%);
     background: linear-gradient(rgba(151, 151, 151, 0.1), #100e17 20%);
     background-color: #100e17;
     margin: 0 auto;
@@ -10,12 +12,16 @@
 
 #projectlist {
     --cardWidth: 5.3109vw;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     position: absolute;
     width: 70%;
     height: 70%;
     top: 50%;
     left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     gap: 1.5vw;
 }
@@ -24,6 +30,8 @@
 #projectlist li {
     top: 50%;
     left: 0;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
     transform: translateY(-50%);
     overflow: hidden !important;
     position: relative;
@@ -34,15 +42,19 @@
     background-color: grey;
     background-position: left;
     border-radius: 5vmax;
+    -webkit-transition: 0.5s ease-in-out;
+    -o-transition: 0.5s ease-in-out;
     transition: 0.5s ease-in-out;
     cursor: pointer;
     background-size: cover;
     background-repeat: repeat;
+    -webkit-filter: grayscale(100%);
     filter: grayscale(100%);
     background-image: url(images/project-images/projects-bg.jpg);
 }
 
 .cardWidth {
+    -webkit-filter: grayscale(0%) !important;
     filter: grayscale(0%) !important;
     width: calc(var(--cardWidth) * 7) !important;
 }
@@ -56,15 +68,21 @@
     display: block;
     position: absolute;
     top: 100%;
+    -webkit-transform: translate(0, -100%);
+    -ms-transform: translate(0, -100%);
     transform: translate(0, -100%);
     background-color: rgba(255, 255, 255, 0.45);
     border-radius: 0;
     border-bottom-left-radius: 5vmax;
     border-bottom-right-radius: 5vmax;
+    -webkit-transition: 0.5s ease-in-out;
+    -o-transition: 0.5s ease-in-out;
     transition: 0.5s ease-in-out;
 }
 
 .pro-psedo-slide::before {
+    -webkit-transition: 0.5s ease-in;
+    -o-transition: 0.5s ease-in;
     transition: 0.5s ease-in;
     opacity: 1 !important;
 }
@@ -81,8 +99,12 @@
     position: absolute;
     top: 100%;
     left: 0;
+    -webkit-transform: translate(0%, -100%) rotate(0turn) scale(0.8);
+    -ms-transform: translate(0%, -100%) rotate(0turn) scale(0.8);
     transform: translate(0%, -100%) rotate(0turn) scale(0.8);
     border-radius: 50%;
+    -webkit-transition: 0.5s ease-in-out;
+    -o-transition: 0.5s ease-in-out;
     transition: 0.5s ease-in-out;
 
     font-style: normal;
@@ -126,6 +148,8 @@
 
 .pro-psedo-slide::after {
     left: 49% !important;
+    -webkit-transform: translate(-100%, -100%) scale(0.8) !important;
+    -ms-transform: translate(-100%, -100%) scale(0.8) !important;
     transform: translate(-100%, -100%) scale(0.8) !important;
 }
 
@@ -135,6 +159,8 @@
     top: 100%;
     left: 51%;
     height: var(--cardWidth);
+    -webkit-transform: translate(0, -100%);
+    -ms-transform: translate(0, -100%);
     transform: translate(0, -100%);
 }
 
@@ -142,11 +168,15 @@
     opacity: 0;
     position: absolute;
     top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
     transform: translateY(-50%);
     text-align: left;
     font-weight: 600;
     font-family: 'Montserrat', sans-serif;
     font-size: calc(0.8vmax + 0.8vmin);
+    -webkit-transition: 0s ease-in 0.2s;
+    -o-transition: 0s ease-in 0.2s;
     transition: 0s ease-in 0.2s;
 }
 
@@ -167,25 +197,41 @@
     position: absolute;
     width: 100%;
     font-family: 'Montserrat', sans-serif;
+    -webkit-transform: translate(-50%, -40%);
+    -ms-transform: translate(-50%, -40%);
     transform: translate(-50%, -40%);
 }
 
 .cardWidth .empty {
     opacity: 1 !important;
+    -webkit-transform: translate(-50%, -50%) !important;
+    -ms-transform: translate(-50%, -50%) !important;
     transform: translate(-50%, -50%) !important;
+    -webkit-transition: 0.5s ease-in 0.4s, -webkit-transform 0.2s ease-in 0.4s;
+    transition: 0.5s ease-in 0.4s, -webkit-transform 0.2s ease-in 0.4s;
+    -o-transition: 0.5s ease-in 0.4s, transform 0.2s ease-in 0.4s;
     transition: 0.5s ease-in 0.4s, transform 0.2s ease-in 0.4s;
+    transition: 0.5s ease-in 0.4s, transform 0.2s ease-in 0.4s, -webkit-transform 0.2s ease-in 0.4s;
 }
 
 
 .cardWidth .pro-description p {
     opacity: 1 !important;
+    -webkit-transition: 0.3s ease-in 0.4s;
+    -o-transition: 0.3s ease-in 0.4s;
     transition: 0.3s ease-in 0.4s;
+    -webkit-transform: translate(0, -50%) !important;
+    -ms-transform: translate(0, -50%) !important;
     transform: translate(0, -50%) !important;
 }
 
 .cardWidth .pro-description div {
     opacity: 1 !important;
+    -webkit-transition: 0.3s ease-in 0.4s, opacity 0s ease 0.5s;
+    -o-transition: 0.3s ease-in 0.4s, opacity 0s ease 0.5s;
     transition: 0.3s ease-in 0.4s, opacity 0s ease 0.5s;
+    -webkit-transform: translate(-50%, 0%) !important;
+    -ms-transform: translate(-50%, 0%) !important;
     transform: translate(-50%, 0%) !important;
 }
 
@@ -206,6 +252,8 @@
     padding: 0 5%;
     position: absolute;
     top: 50%;
+    -webkit-transform: translate(0, -40%);
+    -ms-transform: translate(0, -40%);
     transform: translate(0, -40%);
 }
 
@@ -216,9 +264,12 @@
     text-align: center;
     padding: 1%;
     background-color: rgba(0, 0, 0, 0.6);
+    -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
     width: 50%;
     position: relative;
+    -webkit-transform: translate(-50%, -100%);
+    -ms-transform: translate(-50%, -100%);
     transform: translate(-50%, -100%);
     left: 50%;
     border-bottom-left-radius: 5vmax;
