--- a/stylesheets/skillspage.css
+++ b/stylesheets/skillspage.css
@@ -3,6 +3,8 @@
     height: 100vh;
     position: relative;
     margin: 0 auto;
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(151, 151, 151, 0.1)), color-stop(20%, #100e17));
+    background: -o-linear-gradient(rgba(151, 151, 151, 0.1), #100e17 20%);
     background: linear-gradient(rgba(151, 151, 151, 0.1), #100e17 20%);
     background-color: #100e17;
     background-size: cover;
@@ -12,6 +14,8 @@
 #skillsContainer {
     position: absolute;
     left: 50%;
+    -webkit-transform: translate(-50%, 0);
+    -ms-transform: translate(-50%, 0);
     transform: translate(-50%, 0);
     margin-top: 10vh;
     width: 92%;
@@ -49,6 +53,8 @@
     position: relative;
     left: 50%;
     top: 5%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     width: 70%;
     z-index: 2;
@@ -58,7 +64,6 @@
     position: relative;
     list-style-type: none;
     display: inline-block;
-    /* border: solid white; */
     font-family: 'Montserrat', sans-serif;
     font-size: 1.3vw;
     margin: 0 0.6vw;
@@ -70,6 +75,8 @@
 
 #skill-groups>li:hover {
     color: var(--themeColor) !important;
+    -webkit-transition: 0.5 ease-in;
+    -o-transition: 0.5 ease-in;
     transition: 0.5 ease-in;
 }
 
@@ -83,8 +90,6 @@
 }
 
 #logoContainer {
-    /* z-index: -1; */
-    /* background-color: white; */
     display: block;
     width: 100%;
     height: 100%;
@@ -102,15 +107,21 @@
     display: inline-block;
     outline: solid rgba(255, 255, 255, 0.2) calc(0.1vmax + 0.2vmin);
     outline-offset: 1vmin;
-    border-radius: 50%;
+    border-radius: 50% !important;
     margin: 0 2vmin;
     width: calc(9vmin + 3vmax);
     height: calc(9vmin + 3vmax);
     background-size: contain;
     background-repeat: no-repeat;
     background-size: 80%;
+    -webkit-transform: scale(0.9);
+    -ms-transform: scale(0.9);
     transform: scale(0.9);
+    -webkit-transition: -webkit-transform 0.3s ease-in-out;
+    transition: -webkit-transform 0.3s ease-in-out;
+    -o-transition: transform 0.3s ease-in-out;
     transition: transform 0.3s ease-in-out;
+    transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
     background-position: center center;
 }
 
@@ -119,13 +130,19 @@
 }
 
 #prog ul li {
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
     transform: scale(1);
 }
 
 .skill-icons:nth-child(1) {
     top: 50%;
     left: 50%;
+    -webkit-transform: translate(-50%, -110%);
+    -ms-transform: translate(-50%, -110%);
     transform: translate(-50%, -110%);
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
     display: inline-flex;
     position: relative;
 }
@@ -133,7 +150,11 @@
 .skill-icons:nth-child(3) {
     top: 50%;
     left: 50%;
+    -webkit-transform: translate(-50%, -90%);
+    -ms-transform: translate(-50%, -90%);
     transform: translate(-50%, -90%);
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
     display: inline-flex;
     position: relative;
 }
@@ -190,7 +211,7 @@
 }
 
 #tech1 li:nth-child(2) {
-    background-image: url(images/skill-icons/github.svg);
+    background-image: url(images/skill-icons/git.svg);
 }
 
 #tech1 li:nth-child(3) {
@@ -216,9 +237,12 @@
     text-decoration-thickness: 0.5px;
     font-family: 'Montserrat', sans-serif;
     top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
     transform: translateY(-50%);
     font-weight: 900;
     font-size: clamp(0.5rem, 2vmax + 1vmin, 3rem);
+    -webkit-text-decoration-line: none;
     text-decoration-line: none;
 }
 
@@ -257,6 +281,8 @@
 #text-container {
     position: relative;
     top: 11%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
     transform: translateY(-50%);
     max-height: 30%;
     display: block;
@@ -267,16 +293,19 @@
 }
 
 .skill-text {
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
     transform: translateY(-50%);
     position: absolute;
     color: white;
     padding: 0 1vmax;
     text-align: center;
-    /* font-weight: 900; */
     font-family: 'Montserrat Alternates', sans-serif;
     letter-spacing: 1.5px;
     font-size: clamp(0.3rem, calc(1vmax + 0.5vmin), 5rem);
     opacity: 0;
+    -webkit-transition: opacity 0.3s ease-in;
+    -o-transition: opacity 0.3s ease-in;
     transition: opacity 0.3s ease-in;
 }
 
