--- a/stylesheets/variables.css
+++ b/stylesheets/variables.css
@@ -13,6 +13,10 @@
     --themeColorBack: initial;
 }
 
+::-moz-selection {
+    background: var(--themeColorBack);
+}
+
 ::selection {
     background: var(--themeColorBack);
 }
