--- a/stylesheets/homepage.css
+++ b/stylesheets/homepage.css
@@ -225,7 +225,7 @@
 #about-me-container {
     width: 100%;
     height: 100%;
-    top: 0%;
+    top: 0;
     display: -ms-grid;
     display: grid;
     position: absolute;
