--- a/stylesheets/mobileview.css
+++ b/stylesheets/mobileview.css
@@ -181,12 +181,24 @@
         border-radius: 50% !important;
     }
 
+    .skillCatagory {
+        -webkit-transform: scale(1.2) !important;
+        -ms-transform: scale(1.2) !important;
+        transform: scale(1.2) !important;
+    }
+
     #text-container {
         top: 15%;
     }
 
     .skill-text {
         font-size: clamp(0.3rem, calc(1vmax + 0.9vmin), 5rem);
+    }
+
+    .activeSkill {
+        -webkit-transform: scale(1.3) !important;
+        -ms-transform: scale(1.3) !important;
+        transform: scale(1.3) !important;
     }
 
     /* 
